<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wherethismove.teamfortresstvmobile.pages.AboutPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"

            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_name"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_page_text"

            android:layout_below="@+id/version_number"/>

        <TextView
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockwell_email"

            android:autoLink="email"
            android:textSize="20sp"
            android:layout_below="@+id/app_info"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_affiliations_text"

            android:layout_below="@+id/email_address"/>

    </RelativeLayout>

</FrameLayout>
